cambios en el front

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>PortfolioSpa</title>
+  <title>Portfolio Ivan Litt</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  <link rel="shortcut icon" href="portfolio-spa-front\src\assets\resources\Pf.png">
   <script src="https://kit.fontawesome.com/56bb6296bc.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
